# jyotisha-mcp

./: .coverage  .gitignore  pyproject.toml  summary.txt  test_engines.py
db/: knowledge_graph.json  secret.key
src/jyotisha/: __init__.py  constants.py
src/jyotisha/api/: server.py
src/jyotisha/db/: __init__.py  crud.py  database.py  schema.sql
src/jyotisha/engines/: __init__.py  (+19 more)
tests/: generate_golden_fixtures.py  test_ashtakavarga.py  test_astronomy_foundation.py  test_golden_charts.py  test_golden_framework.py  test_knowledge_rag.py  test_security_db.py  test_shadbala.py  test_sprint1_fixes.py  test_sprint4_jaimini_kp.py  test_sprint5_dasha_transit.py  test_yoga.py
tests/golden_charts/: celeb_abraham_lincoln.json  celeb_albert_einstein.json  celeb_bill_gates.json  celeb_charles_darwin.json  celeb_isaac_newton.json  celeb_leonardo_da_vinci.json  celeb_mahatma_gandhi.json  celeb_marie_curie.json  celeb_steve_jobs.json  celeb_wolfgang_amadeus_mozart.json  equinox_autumnal_2000.json  equinox_autumnal_2012.json  equinox_autumnal_2024.json  equinox_autumnal_2028.json  equinox_vernal_2000.json  equinox_vernal_2012.json  equinox_vernal_2024.json  equinox_vernal_2028.json  hist_1000_12.json  hist_1000_3.json  hist_1000_6.json  hist_1000_9.json  hist_1200_12.json  hist_1200_3.json  hist_1200_6.json  hist_1200_9.json  hist_1400_12.json  hist_1400_3.json  hist_1400_6.json  hist_1400_9.json  hist_1500_12.json  hist_1500_3.json  hist_1500_6.json  hist_1500_9.json  hist_1600_12.json  hist_1600_3.json  hist_1600_6.json  hist_1600_9.json  hist_1700_12.json  hist_1700_3.json  (+80 more)
(+18 files in other folders)
