[project]
name = "jyotisha-mcp"
version = "0.1.0"
description = "Production-grade Vedic Astrology MCP Server"
requires-python = ">=3.11"
dependencies = [
    "pyswisseph>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "timezonefinder>=6.5.0",
    "pytz>=2024.1",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "chromadb",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]
db = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
]
knowledge = [
    "neo4j>=5.20",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jyotisha"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
